--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
-<head></head>
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <script src="urls.js"></script>
+</head>
 <body>
     <script src="index.min.js"></script>
     <div id="test"></div>
