--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,8 @@
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <script src="js/react.min.js"></script>
+    <script src="js/reactdom.min.js"></script>
     <script src="urls.js"></script>
 </head>
 <body>
